# snakevision

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yaml  release-please.yaml  testing.yaml
examples/: atac_rulegraph.dot  cell-seek_gex_rulegraph.dot  chip_rulegraph.dot  genome-seek.rulegraph.stdout  leafworker_rulegraph.dot  metavirs_rulegraph.dot  modr_rulegraph.dot  rna-seek_rulegraph.stdout
snakevision/: __init__.py  __main__.py  animation.py  cli.py  interactivity.py  metadata.py  snakevision.py  utils.py  version.py
src/: __init__.py  snakevision.py
