[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snakevision"
version = "1.1.1"
description = "A tool to visualize Snakemake workflows."
authors = [
    { name = "Skyler Kuhn" },
    { name = "Michael Jahn" },
]
readme = "README.md"
requires-python = ">=3.7,<4"
license = { file = "LICENSE" }
keywords = ["snakemake", "workflow", "visualization", "graphviz", "bioinformatics"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

# Main package dependencies
dependencies = [
  "dagviz>=0.4.0,<1",
  "networkx>=2.5.1,<4",
  "pyyaml>=5.4,<7"
]

# Testing, linting, ci, and build dependencies
[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "pytest>=8.0.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.urls]
Repository = "https://github.com/OpenOmics/snakevision"
Issues = "https://github.com/OpenOmics/snakevision/issues"

# Main entry point for the command-line interface
[project.scripts]
snakevision = "snakevision.cli:main"

[tool.setuptools]
packages = ["snakevision"]
